Build tools, Cakefile cleanup, swith to Mocha & expect over jasmine-node

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>Backpack.js</title>
-
-  <script src="./lib/ender.js" type="text/javascript"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="./node_modules/underscore/underscore-min.js" type="text/javascript"></script>
+  <script src="./node_modules/backbone/backbone-min.js" type="text/javascript"></script>
+  <script src="./lib/Backpack-bundle.min.js" type="text/javascript"></script>
 </head>
 <body>
 
