--- a/index.html
+++ b/index.html
@@ -9,53 +9,32 @@
     <script src="./vendor/backbone.js" type="text/javascript"></script>
     <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
   </head>
-  <body class='backpack'>
-
-    <div id='nav' style='display:block; width: 960px; margin: 30px auto 0;'></div>
+  <body class='backpack' style='width: 960px; margin: 30px auto 0;'>
+    
+    <h3>Backpack.Menu &amp; Backpack.MenuItem</h3>
+    <div id='menu'></div>
 
     <script>
       $(function(){
 
-        var navigation = new Backpack.Menu('#nav', 'main-navigation'),
-                github = new Backpack.MenuItem(
-                                "<a href='javascript:void(0);'>Download on Github</a>",
-                                { 
-                                  "name": "Download on Github",
-                                  "events": 
-                                    {
-                                      "click": function() {
-                                        window.location = 'http://www.airbnb.com';
-                                      }
-                                    }
-                                }
-                              );
-
-        navigation.add( 
-                        "<a href='javascript:void(0);'>Home</a>",
-                        {
-                          "name": "Home",
-                          "events": 
-                            {
-                              "click": 
-                                  function(){
-                                    alert('Home was clicked'); 
-                                  },
-                              "mouseenter": 
-                                  function() {
-                                    console.log('Home mouseenter');
-                                  },
-                              "mouseleave":
-                                  function() {
-                                    console.log('Home mouseleave');
-                                  }
-                            }
-                        }
-                      )
-                  .render();
-
-        navigation.add(github)
-                  .add("<a>New Stuff</a>")
-                  .add("<a href='http://github.com'>Andrew</a>")
+        var navigation = new Backpack.Menu('#menu'),
+                github = new Backpack.MenuItem('Download on Github', "http://github.com", 'github'),
+                 alert = new Backpack.MenuItem("Events <div class='target' style='height: 3px;background:grey;'></div>",  
+                                                {
+                                                  "click": function(){
+                                                    console.log('click');
+                                                  },
+                                                  "mouseenter .target": function() {
+                                                    console.log('mouseenter target')
+                                                  }
+                                                }
+                                              );
+        navigation.add("Home")
+                  .add("About Us", '#about')
+                  .add("<span class='bold'>Airbnb</span>", "http://www.airbnb.com")
+                  .add('Clicks', function(){ console.log('click event') })
+                  .add(github)
+                  .add(alert)
                   .render();
         
       });
