--- a/index.html
+++ b/index.html
@@ -4,64 +4,79 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Backpack.js</title>
     <link rel=StyleSheet href="./lib/css/Backpack.css" type="text/css" media=screen>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="./vendor/zepto.js"></script>
     <script src="./vendor/underscore.js" type="text/javascript"></script>
     <script src="./vendor/backbone.js" type="text/javascript"></script>
     <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
   </head>
-  <body class='backpack' style='width: 960px; margin: 30px auto 0;'>
+  <body class='backpack' style='width: 680px; margin: 30px auto 0;color: #333; background-color: #F0F2F1;'>
 
-    <h2>Backpack Demo</h2><br/>
-    <div id='menu'></div>
-
-
+    <div id='nav'></div>
 
 
     <script>
+        // var menu = new Backpack.Menu({
+        //               before: "lkajsdlkjasd",
+        //               hide: true
+        // });
+
+        // var menu = new Backpack.Menu().hide().before("kjahsdkjhasdkjahs");
+
+        // var layout = new Backpack.Layout(8);
+
+        // layout.add(menu, 2)
+        //       .add(nav)
+
+
       $(function(){
-
         // ------------------------------------
-        //  Backpack.Menu & Backpack.MenuItem
+        //  Backpack.Menu
         // ------------------------------------
-        var navigation = new Backpack.Menu('#menu'),
-                github = new Backpack.MenuItem("Download on Github<div class='target' style='height: 3px;background:grey;'></div>", "http://github.com", 'github'),
-                 alert = new Backpack.MenuItem("Events Object",  
-                                                {
-                                                  "click": function(){
-                                                    console.log('click');
+        var navigation = new Backpack.Menu('#nav'),
+                  menu = new Backpack.Menu(),
+                github = new Backpack.MenuItem("Download on Github",  
+                                                {"mouseleave": function(){
+                                                    console.log('mouseleave');
                                                   },
-                                                  "mouseenter .target": function() {
-                                                    console.log('mouseenter target')
+                                                  "mouseenter": function() {
+                                                    console.log('mouseenter')
                                                   }
-                                                }
-                                              );
-        // navigation.add("Home")
-        //           .add("About Us", '#about')
-        //           .add("<span class='bold'>Airbnb</span>", "http://www.airbnb.com")
-        //           .add('Clicks', function(){ console.log('click event') })
-        //           .add(github)
-        //           .add(alert)
-        //           .render();
-        
+                                                });
 
+        navigation.render()
+                  .before("<h2>Backpack.js</h2><br/><h3>Menus</h3>")
+                  .after("<br/> <h3>Modals</h3>")
+                  .addClass('press');
+        menu.render();
 
-        // ------------------------------------
-        //  Backpack.Overlay
-        // ------------------------------------
-        var overlay = Backpack.Overlay.getInstance().render().hide();
-        navigation.add('Overlay', function(){ overlay.setLock(false).show() }).render();
+        navigation.add("<img src='http://a1.muscache.com/s/1318028912/images/logos/106x40.png'", 'http://www.airbnb.com', 'logo')
+                  .add('Home', '#')
+                  .add('About Us', '#about')
+                  .add('Clicks', function() { console.log("click") })
+                  .add(github);
 
 
         // ------------------------------------
         //  Backpack.Dialog
         // ------------------------------------
-        navigation.add('Dialog', function(){ new Backpack.Dialog({ content: "Dialog" }).render().show() }).render()
+        menu.add('Dialog', function(){ 
+          new Backpack.Dialog({ content: "Dialog " + Math.floor(Math.random()*11) }).render().show();
+        });
+
+        // ------------------------------------
+        //  Backpack.Overlay
+        // ------------------------------------
+        menu.add('Overlay', function(){ 
+          new Backpack.Overlay().setLock(false).render().show();
+        });
 
         // ------------------------------------
         //  Backpack.Modal
         // ------------------------------------
-        var modal = new Backpack.Modal({ content: "This is a Modal" }).render().hide();
-        navigation.add("Modal", function(){ modal.show() })
+        menu.add("Modal", function(){ 
+          new Backpack.Modal({ content: "This is a Modal" }).render().show(); 
+        })
+
 
       });
     </script>
