--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <title>Backpack Spec Runner</title>
-
   <link rel="shortcut icon" type="image/png" href="vendor/jasmine/jasmine_favicon.png">
-
   <link rel="stylesheet" type="text/css" href="vendor/jasmine/jasmine.css">
+
+  <!-- include jasmine -->
   <script type="text/javascript" src="vendor/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="vendor/jasmine/jasmine-html.js"></script>
 
