Update testing structure, add tests

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -3,24 +3,24 @@
 <html>
 <head>
   <title>Backpack Spec Runner</title>
-  <link rel="shortcut icon" type="image/png" href="vendor/jasmine/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="vendor/jasmine/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="../vendor/jasmine/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="../vendor/jasmine/jasmine.css">
 
   <!-- include jasmine -->
-  <script type="text/javascript" src="vendor/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="vendor/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="../vendor/jasmine/jasmine.js"></script>
+  <script type="text/javascript" src="../vendor/jasmine/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="vendor/sinon.js"></script>
-  <script type="text/javascript" src="vendor/sinon/spy.js"></script>
-  <script type="text/javascript" src="vendor/jasmine-sinon.js"></script>
-  <script type="text/javascript" src="vendor/zepto.js"></script>
-  <script type="text/javascript" src="vendor/underscore.js"></script>
-  <script type="text/javascript" src="vendor/backbone.js"></script>
-  <script type="text/javascript" src="lib/Backpack-bundle.js"></script>
+  <script type="text/javascript" src="../vendor/sinon.js"></script>
+  <script type="text/javascript" src="../vendor/sinon/spy.js"></script>
+  <script type="text/javascript" src="../vendor/jasmine-sinon.js"></script>
+  <script type="text/javascript" src="../vendor/zepto.js"></script>
+  <script type="text/javascript" src="../vendor/underscore.js"></script>
+  <script type="text/javascript" src="../vendor/backbone.js"></script>
+  <script type="text/javascript" src="../lib/Backpack-bundle.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/BackpackSpec-bundle.js"></script>
+  <script type="text/javascript" src="../spec/BackpackSpec-bundle.js"></script>
 
   <script type="text/javascript">
     (function() {
