Add more specs, change Backpack.Modal to Backpack.Dialog, other things

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="../vendor/sinon.js"></script>
   <script type="text/javascript" src="../vendor/sinon/spy.js"></script>
   <script type="text/javascript" src="../vendor/jasmine-sinon.js"></script>
-  <script type="text/javascript" src="../vendor/zepto.js"></script>
+  <script type="text/javascript" src="../vendor/jquery.js"></script>
   <script type="text/javascript" src="../vendor/underscore.js"></script>
   <script type="text/javascript" src="../vendor/backbone.js"></script>
   <script type="text/javascript" src="../lib/Backpack-bundle.js"></script>
