--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Backpack.js</title>
     <link rel=StyleSheet href="./lib/css/Backpack.css" type="text/css" media=screen>
-    <script src="./vendor/zepto.js"></script>
+    <script src="./vendor/jquery.js"></script>
     <script src="./vendor/underscore.js" type="text/javascript"></script>
     <script src="./vendor/backbone.js" type="text/javascript"></script>
     <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
@@ -67,7 +67,7 @@
         //  Backpack.Overlay
         // ------------------------------------
         menu.add('Overlay', function(){ 
-          new Backpack.Overlay().setLock(false).render().show();
+          new Backpack.Overlay({lock: false}).render().show();
         });
 
         // ------------------------------------
