Wrap component content in a <div class='content'>

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         // ------------------------------------
         //  Backpack.Modal
         // ------------------------------------
-        menu.add({ content: "Modal", events: function(){ new Backpack.Modal({ content: "This is a Modal" }).render().show().addButton(new Backpack.Button({content:'Accept'})); }});
+        menu.add({ content: "Modal", events: function(){ new Backpack.Modal({ content: "This is a Modal" }).render().show().addButton(new Backpack.Button({content:'Save'})).addButton(new Backpack.Button({content:'Cancel'})) }});
         
 
       });
