--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Backpack.js</title>
-    <link rel=StyleSheet href="./lib/css/Backpack.css" type="text/css" media=screen>
-    <script src="./vendor/jquery.js"></script>
-    <script src="./vendor/underscore.js" type="text/javascript"></script>
-    <script src="./vendor/backbone.js" type="text/javascript"></script>
-    <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./lib/css/Backpack.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="./assets/css/prettify.css" type="text/css" media="screen">
   </head>
   <body class='backpack'>
     
@@ -15,10 +12,35 @@
       <nav id='nav' style='width: 960px; margin: 0 auto; height: 100px; padding: 20px 0 0;'></nav>
     </section>
 
-    <section id='docs' style='width: 960px; margin: 0 auto;'></section>
+    <section id='docs' style='width: 960px; margin: 0 auto;'>
+      <h2>Backpack.Menu</h2>
+<pre class="prettyprint linenums">
+var menu = new Backpack.Menu({ 
+  parent: '#backpack-menu', 
+  render: true, 
+  show: true
+});
 
+menu.add({ content: 'Menu Item 1' })
+    .add({ content: 'Menu Item 2' })
+    .add({ content: 'Menu Item 3' });
+</pre>
+      <div id="backpack-menu"></div>
 
+      <h2>Backpack.Dialog, Backpack.Overlay, &amp; Backpack.Modal</h2>
+      <div id="backpack-dialog"></div>
+    </section>
+
+    <script src="./vendor/jquery.js"></script>
+    <script src="./vendor/underscore.js" type="text/javascript"></script>
+    <script src="./vendor/backbone.js" type="text/javascript"></script>
+    <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
+    <script src="./assets/js/prettify.js" type="text/javascript"></script>
     <script>
+        $(document).ready(function(){
+          prettyPrint();
+        });
+
         // var menu = new Backpack.Menu({
         //               before: "lkajsdlkjasd",
         //               hide: true
@@ -39,18 +61,15 @@
         var navigation = new Backpack.Menu({ parent:'#nav' }),
 
                   menu = new Backpack.Menu({ 
-                    parent: '#docs', 
+                    parent: '#backpack-menu', 
                     render: true, 
-                    show: true, 
-                    before: "<h2>Backpack.Menu</h2>",
-                    after:  "<br/><br/><br/>"
+                    show: true
                   }),
 
                 dialog = new Backpack.Menu({ 
-                  parent: '#docs',
+                  parent: '#backpack-dialog',
                   render: true,
-                  show: true,
-                  before: "<h2>Backpack.Dialog, Backpack.Overlay, &amp; Backpack.Modal</h2>"
+                  show: true
                 }),
 
                 github = new Backpack.MenuItem({ 
